--- a/src/app/tariffs/tariffs.component.html
+++ b/src/app/tariffs/tariffs.component.html
@@ -11,7 +11,7 @@
           Holen Sie sich jetzt alle Informationen für unsere Sommer Touren!
         </p>
       </div>
-      <div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog"
+      <div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" style="overflow: scroll"
            aria-labelledby="myBasicModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fluid" style="max-width: 80%" role="document">
           <div class="modal-content">
@@ -49,7 +49,7 @@
           Holen Sie sich jetzt alle Informationen für unsere Winter Touren!
         </p>
       </div>
-      <div mdbModal #basicModal2="mdbModal" class="modal fade" tabindex="-1" role="dialog"
+      <div mdbModal #basicModal2="mdbModal" class="modal fade" tabindex="-1" role="dialog" style="overflow: scroll"
            aria-labelledby="myBasicModalLabel1" aria-hidden="true">
         <div class="modal-dialog modal-fluid" style="max-width: 80%" role="document">
           <div class="modal-content">
