Update background color style

--- a/src/app/main-info/main-info.component.scss
+++ b/src/app/main-info/main-info.component.scss
@@ -5,6 +5,8 @@
   background-size:cover;
   background-attachment:fixed;
   min-height: 400px;
+  background-color: gray;
+  background-blend-mode: luminosity;
 }
 .bergfuehrer{
   height: 600px;
