--- a/src/app/main-info/main-info.component.html
+++ b/src/app/main-info/main-info.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="decorator"></div>
-  <div class="background-img-mount"></div>
+  <div class="background-img-snow"></div>
   <div class="decorator"></div>
   <div class="bergwanderfuehrer container">
     <img class="icon-img" width="100px" src="../../assets/icons/noun_Mountain Climbing_45240(2).png"/>
