--- a/src/app/main-info/main-info.component.html
+++ b/src/app/main-info/main-info.component.html
@@ -3,7 +3,7 @@
   <div class="decorator"></div>
   <div class="bergfuehrer container">
     <img class="icon-img" width="100px" src="../../assets/icons/noun_Carabiner_45153(1).png"/>
-    <h3 class="title">Bergführer </h3>
+    <h3 class="title"><b>Bergführer</b> </h3>
     <div class="container">
       <div class="row">
         <div class="col">
@@ -14,6 +14,9 @@
         </div>
         <div class="col">
           <app-member [member]="members[2]"></app-member>
+        </div>
+        <div class="col">
+          <app-member [member]="members[6]"></app-member>
         </div>
       </div>
     </div>
@@ -27,13 +30,13 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <app-member [member]="members[0]"></app-member>
+          <app-member [member]="members[3]"></app-member>
         </div>
         <div class="col">
-          <app-member [member]="members[1]"></app-member>
+          <app-member [member]="members[4]"></app-member>
         </div>
         <div class="col">
-          <app-member [member]="members[2]"></app-member>
+          <app-member [member]="members[5]"></app-member>
         </div>
       </div>
     </div>
