--- a/src/app/main-info/main-info.component.scss
+++ b/src/app/main-info/main-info.component.scss
@@ -6,10 +6,10 @@
   background-attachment:fixed;
   min-height: 400px;
   background-color: gray;
-  background-blend-mode: luminosity;
+  background-blend-mode: multiply;
 }
 .bergfuehrer{
-  height: 600px;
+  height: auto;
   background-color: white;
 }
 .background-img-mount{
@@ -22,7 +22,7 @@
 }
 
 .bergwanderfuehrer{
-  height: 600px;
+  height: auto;
   background-color: white;
 }
 .decorator{
@@ -39,14 +39,23 @@
 
 .title{
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .icon-img{
+  margin: 2rem auto 2rem auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  height: auto;
+  width: 8rem;
+  transition: 0.5s;
+}
+.icon-img:hover{
+  transform: scale(1.05);
 }
 
 .gallery{
   height: 1000px;
+}
+.container{
+  margin-bottom: 3rem;
 }
