--- a/src/app/main-info/main-info.component.html
+++ b/src/app/main-info/main-info.component.html
@@ -42,8 +42,8 @@
     </div>
   </div>
   <div class="decorator"></div>
-  <div class="container gallery">
-    <div>Gallery here</div>
+  <div class="container">
+<!--    <app-gallery></app-gallery>-->
   </div>
 
   <div class="decorator"></div>
