--- a/src/app/tariffs/tariffs.component.html
+++ b/src/app/tariffs/tariffs.component.html
@@ -1,4 +1,4 @@
-<div class="container tariffs-container">
+<div id="tariffs" class="container tariffs-container">
   <h1 class="tariffs-title">Unsere Tarife <i style="margin-left: 1rem" class="fas fa-info"></i></h1>
   <div class="row tariffs">
     <div class="col-md-6">
