--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,13 +19,16 @@
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Navigation</h6>
         <p>
-          <a href="#!">Tariffe</a>
+          <a href="#tariffs">Tarife</a>
         </p>
         <p>
-          <a href="#!">Bergführer</a>
+          <a href="#bergfuehrer">Bergführer</a>
         </p>
         <p>
-          <a href="#!">Bergwanderführer</a>
+          <a href="#bergwanderfuehrer">Bergwanderführer</a>
+        </p>
+        <p>
+          <a href="#galleria">Gallerie</a>
         </p>
       </div>
       <!-- Grid column -->
@@ -34,18 +37,15 @@
 
       <!-- Grid column -->
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+        <h6 class="text-uppercase mb-4 font-weight-bold">Kontakt</h6>
         <p>
           <mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
         </p>
         <p>
-          <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@example.com
+          <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@bergführer-matrei.at
         </p>
         <p>
           <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 01 234 567 88
-        </p>
-        <p>
-          <mdb-icon fas icon="print" class="mr-3"></mdb-icon> + 01 234 567 88
         </p>
       </div>
       <!-- Grid column -->
@@ -82,17 +82,7 @@
             </li>
             <li class="list-inline-item">
               <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                <mdb-icon fab icon="twitter"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                <mdb-icon fab fab icon="google-plus"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                <mdb-icon fab icon="linkedin"></mdb-icon>
+                <mdb-icon fab icon="instagram"></mdb-icon>
               </a>
             </li>
           </ul>
