--- a/src/app/main-info/main-info.component.html
+++ b/src/app/main-info/main-info.component.html
@@ -1,7 +1,7 @@
 <div class="main-into-container">
   <div class="background-img-snow"></div>
   <div class="decorator"></div>
-  <div class="bergfuehrer container">
+  <div id="bergfuehrer" class="bergfuehrer container">
     <img class="icon-img" width="100px" src="../../assets/icons/noun_Carabiner_45153(1).png"/>
     <h3 class="title"><b>Bergführer</b> </h3>
     <div class="container">
@@ -24,7 +24,7 @@
   <div class="decorator"></div>
   <div class="background-img-snow"></div>
   <div class="decorator"></div>
-  <div class="bergwanderfuehrer container">
+  <div id="bergwanderfuehrer" class="bergwanderfuehrer container">
     <img class="icon-img" width="100px" src="../../assets/icons/noun_Mountain Climbing_45240(2).png"/>
     <h3 class="title">Bergwanderführer</h3>
     <div class="container">
@@ -43,10 +43,8 @@
   </div>
   <div class="decorator"></div>
   <div class="container">
-<!--    <app-gallery></app-gallery>-->
+    <app-gallery></app-gallery>
   </div>
-
   <div class="decorator"></div>
   <div class="background-img"></div>
-
 </div>
