--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -39,13 +39,13 @@
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Kontakt</h6>
         <p>
-          <mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
+          <mdb-icon fas icon="home" class="mr-3"></mdb-icon> Marstallweg 17, A-9971 Matrei
         </p>
         <p>
           <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@bergführer-matrei.at
         </p>
         <p>
-          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 01 234 567 88
+          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 43 664 1023873
         </p>
       </div>
       <!-- Grid column -->
